# login-website

./: .env-example  README.md  docker-compose.yml
db/scripts/: example.sql
dev_tools/: init.sh
login-website/: Dockerfile  app.py  pyproject.toml  test.py
login-website/login_website/: authentication_tool.py  crud.py  database.py  dependents.py  main.py  models.py  password.py  password_tool.py  schemas.py  settings.py
login-website/login_website/config/: settings.py
login-website/login_website/routers/: auth.py  users.py
login-website/tests/: test_login_website.py
nginx-proxy/: .dockerignore  Dockerfile  nginx.conf
nginx-proxy/frontend-login-website/: package-lock.json  package.json  tailwind.config.js
nginx-proxy/frontend-login-website/src/: App.jsx  index.jsx
nginx-proxy/frontend-login-website/src/actions/: index.js
nginx-proxy/frontend-login-website/src/api/: index.js
nginx-proxy/frontend-login-website/src/assets/styles/: _mixin.scss  _variable.scss  _wrap.scss  all.scss
nginx-proxy/frontend-login-website/src/components/: Header.jsx  LoginForm.jsx  LoginStatus.jsx  LogoutBtn.jsx  RegisterBtn.jsx  RegisterForm.jsx  UserInfo.jsx  UserInfoEdit.jsx
nginx-proxy/frontend-login-website/src/constants/: index.js
nginx-proxy/frontend-login-website/src/pages/: LoginPage.jsx  MainPage.jsx  RegisterPage.jsx  UserEditPage.jsx
nginx-proxy/frontend-login-website/src/reducers/: index.jsx
nginx-proxy/frontend-login-website/src/store/: index.js
