[tool.poetry]
name = "login-website"
version = "0.1.0"
description = ""
authors = ["Zhima-Mochi <yehgoter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
SQLAlchemy = "^1.4.31"
asyncpg = "^0.25.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.3"
python-jose = "^3.3.0"
databases = "^0.5.5"
mysql-client = "^0.0.1"
aiomysql = "^0.0.22"
mysqlclient = "^2.1.0"
python-multipart = "^0.0.5"
aioredis = "^2.0.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
